* (bug 2111) Collapsable exif metadata table, clean up display List of non-collapsing fields is in [[MediaWiki:Metadata-fields]]. Intro paragraph is in [[MediaWiki:Metadata-help]].

--- a/skins/common/common.css
+++ b/skins/common/common.css
@@ -316,33 +316,36 @@ li span.deleted {
 
 
 /* Classes for EXIF data display */
-table.exif {
+table.mw_metadata {
 	margin-left: 0.5em;
 }
 
-table.exif caption { font-weight: bold; }
-table.exif th { font-weight: normal; }
-table.exif td { padding: 0.1em; }
+table.mw_metadata caption { font-weight: bold; }
+table.mw_metadata th { font-weight: normal; }
+table.mw_metadata td { padding: 0.1em; }
 
-table.exif {
+table.mw_metadata {
 	border: none;
 	border-collapse: collapse;
 }
-table.exif td, table.exif th {
+table.mw_metadata td, table.mw_metadata th {
 	border: 1px solid #aaaaaa;
 	padding-left: 4px;
 	padding-right: 4px;
 }
-table.exif th {
+table.mw_metadata th {
 	background-color: #f9f9f9;
 }
-table.exif td {
+table.mw_metadata td {
 	background-color: #fcfcfc;
 }
-table.exif td.spacer {
+table.mw_metadata td.spacer {
 	background: inherit;
 	border-top: none;
 	border-bottom: none;
+}
+table.collapsed tr.collapsable {
+	display: none;
 }
 
 .visualClear {
